2017-08-09: Add battery, stringboxes, ticket attachment and support OAuth2
2017-09-13: Add ticket history , extend update and create ticket endpoint in order to access assignee
2017-10-19: Add serial UTC DateTime as return values, create comment support createdAt
2017-10-19: Create comment accepts optional created at timestamp
2017-11-08: Add firmware property to devices except stringboxes
2018-02-08: Add system picture, hourly resolution for measurements and hasVcom property
2018-03-21: Update model namespace
2018-04-02: Add currency in system, update model parameter type
2018-04-25: Implement jsonSerialize for model
2018-10-22: Support includeInterval query parameter, power plant controllers endpoints and support more resolutions for measurement endpoints
2019-01-10: Version 2.0.0, support multiple abbreviations for basics and calculations measurement endpoints, and use OAuth2 authentication mode by default
2019-01-16: Add specific energy yield forecast endpoint
2019-07-16: Add isActive property to stringbox abbreviation endpoint, activeOnly to stringbox bulk endpoint and abbreviations filter to all bulk endpoints
2019-07-16: Implement OAuth token cache
2019-11-27: Add virtual-meters
2019-12-04: Add trackers endpoint
2020-03-31: Add new property simulationMethod to SystemDetail model
2020-07-02: Add picture meta in ticket attachment
2020-12-10: Enable cmms endpoints
2021-02-09: Add simulation endpoint
2021-06-02: Declare return type
2022-01-13: Add cause property for ticket and ability to manipulate ticket cause
2022-02-23: Add forecast endpoint
2022-04-20: Add ability to manipulate ticket fieldService property
2022-08-31: Add environmental-savings endpoints
2022-11-30: Add startedAt property for Alarm
2022-12-08: Add Yield lose endpoints
2023-03-21: Add new property DueDate to work order
2023-09-07: Add satellite irradiance endpoint
2023-10-04: Add endpoints with different power control sources for yield loss calculation