@@ -36,3 +36,4 @@
 2023-03-21: Add new property DueDate to work order
 2023-09-07: Add satellite irradiance endpoint
 2023-10-04: Add endpoints with different power control sources for yield loss calculation
+2023-10-31: Remove the yield loss calculation endpoints that didn't specify the power control sources
